--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,10 @@
             <artifactId>spring-boot</artifactId>
             <version>2.4.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
